--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ virtualenv==20.1.0
 virtualenvwrapper-win==1.2.6
 wincertstore==0.2
 xlrd==2.0.1
+
+django~=3.1.5
+pytz~=2020.5
+djangorestframework-jwt~=1.11.0
